# rune

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  run.py  test_signal.py  tui-implementation.json
.agents/skills/example-skill/: SKILL.md
.github/workflows/: doc-sync.yml
docs/: cli.md  sessions.md  skills.md
docs/2026-02-09/signal-integration/: IMPLEMENTATION_COMPLETE.md  README.md  docs.md  plan.md  todo.md
docs/anthropic-models/: docs.md  plan.md  todo.md
examples/: README.md  signal_example.py
rune/: __init__.py  agents.py  cli.py  tui.py  tui.py.orig  utils.py
rune/cli/: __init__.py  banner.py  input_widget.py  main.py  tui.py
rune/harness/: __init__.py  agent.py  agents_md.py  mcp_client.py  permissions.py  providers.py  session.py  skills.py  store.py  tools.py
rune/integrations/: __init__.py
rune/integrations/signal/: __init__.py  client.py  daemon.py  exceptions.py  send.py  transport.py
rune/tests/: __init__.py  test_agents_md.py  test_skills.py  test_store.py
scripts/: install.sh
tests/: conftest.py  test_providers.py  test_session.py
