[tool.poetry]
name = "rune"
version = "0.2.0"
description = "A powerful coding agent with a clean API"
authors = ["Freddie Vargus <fjv41995@gmail.com>"]
readme = "README.md"
packages = [{include = "rune"}]

[tool.poetry.scripts]
rune = "rune.cli.main:main"

[tool.poetry.dependencies]
python = ">=3.10.13,<4.0"
openai = ">=1.0.0,<2.0.0"
rich = ">=13.0.0,<14.0.0"
prompt_toolkit = ">=3.0.0,<4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ipython = ">=8.32.0,<9.0.0"
pdbpp = ">=0.10.3,<0.11.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "TID",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
