[project]
name = "rune"
version = "0.2.0"
description = "A powerful coding agent with a clean API"
readme = "README.md"
requires-python = ">=3.10.13,<4.0"
authors = [{ name = "Freddie Vargus", email = "fjv41995@gmail.com" }]

dependencies = [
  "openai>=1.0.0,<2.0.0",
  "rich>=13.0.0,<14.0.0",
  "prompt_toolkit>=3.0.0,<4.0.0",
  "pyyaml>=6.0",
]

[project.scripts]
rune = "rune.cli.main:main"

[project.optional-dependencies]
dev = [
  "pytest==8.3.5",
  "ipython>=8.32.0,<9.0.0",
  "pdbpp==0.9.5",
  "fancycompleter==0.9.1",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-v"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "TID",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
